--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -256,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Questions 5"
+    "# Question 5"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Questions 6:"
+    "## Question 6:"
    ]
   },
   {
